[package]
name = "mailsync"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.0-beta.4"
email-parser = { path = "../email-parser" }
futures = "0.1.18"
futures-state-stream = "0.1.1"
itertools = "0.6.2"
mbox-reader = { path = "../mbox-reader" }
postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono"], rev = "acb424afa4cbb06433da8720ee1d977e6bf53a4f" }
postgres-derive = "0.3.1"
serde = "1"
serde_derive = "1"
tokio-core = "0.1.9"
tokio-imap = { git = "https://github.com/djc/tokio-imap", rev = "b1acecc75757ca359cc32eecb12e7884607a27c8" }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono"], rev = "acb424afa4cbb06433da8720ee1d977e6bf53a4f" }
toml = "0.4.5"

[replace]
"futures-state-stream:0.1.1" = { path = "../futures-state-stream" }
