[package]
name = "mailsync"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
email-parser = { path = "../email-parser" }
futures = "0.3"
mbox-reader = "0.2"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.1", features = ["derive"] }
serde = "1"
serde_derive = "1"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
tokio-imap = { path = "../tokio-imap/tokio-imap" }
tokio-postgres = "0.5"
toml = "0.4"
